tests/transpiler/x/swift/dataset_where_filter.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden840429466/013/main.swift:13:111: error: cannot convert value of type 'Any' to expected condition type 'Bool'
11 | print("--- Adults ---")
12 | for person in adults {
13 |     print(String(describing: person["name"]!), "is", String(describing: person["age"]!), ((person["is_senior"]! ? " (senior)" : "") as! String))
   |                                                                                                               `- error: cannot convert value of type 'Any' to expected condition type 'Bool'
14 | }
15 | 

/tmp/TestSwiftTranspiler_VMValid_Golden840429466/013/main.swift:13:133: warning: forced cast of 'String' to same type has no effect
11 | print("--- Adults ---")
12 | for person in adults {
13 |     print(String(describing: person["name"]!), "is", String(describing: person["age"]!), ((person["is_senior"]! ? " (senior)" : "") as! String))
   |                                                                                                                                     `- warning: forced cast of 'String' to same type has no effect
14 | }
15 | 
