tests/transpiler/x/swift/dataset_where_filter.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:51:37 GMT+7
import Foundation
let people = [["name": "Alice", "age": 30], ["name": "Bob", "age": 15], ["name": "Charlie", "age": 65], ["name": "Diana", "age": 45]]
let adults = ({ var _res: [[String: Any]] = []
for person in people {
    if ((person["age"]! as! Int) >= 18) {
        _res.append(["name": person["name"]!, "age": person["age"]!, "is_senior": ((person["age"]! as! Int) >= 60)])
    }
}
return _res })()
print("--- Adults ---")
for person in adults {
    print(String(describing: person["name"]!), "is", String(describing: person["age"]!), ((person["is_senior"]! ? " (senior)" : "") as! String))
}
